fix(app): fix map not showing in results page with an add of max-with in app container

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 .app{
+    margin: 0 auto;
     max-width: 1920px;
 }
