--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,6 @@ body {
   font-family: 'Cabin', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  display: flex;
-  justify-content: center;
 }
 
 .bold{
